--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -1974,4 +1974,20 @@ These are the behind the scene internal collections. They are listed here so tha
   <data name="U05" xml:space="preserve">
     <value>Symbol</value>
   </data>
+  <data name="Tabbed_Pivot.Text" xml:space="preserve">  
+    <value>Tabbed</value>
+    <comment>Page title for Tabbed</comment>
+  </data>
+  <data name="Tabbed_PivotItem1.Header" xml:space="preserve">  
+    <value>Item 1</value>
+    <comment>First Pivot item title for Tabbed</comment>
+  </data>
+  <data name="Tabbed_PivotItem2.Header" xml:space="preserve">
+    <value>Item 2</value>
+    <comment>Second Pivot item title for Tabbed</comment>
+  </data>
+  <data name="Shell_Tabbed" xml:space="preserve">
+    <value>Tabbed</value>
+    <comment>Navigation view item name for Tabbed</comment>
+  </data>
 </root>
