--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -200,7 +200,7 @@
     <value>Model Graph application</value>
   </data>
   <data name="004N" xml:space="preserve">
-    <value>Models...</value>
+    <value>List of loaded models</value>
   </data>
   <data name="004S" xml:space="preserve">
     <value>List of loaded models</value>
@@ -1974,11 +1974,11 @@ These are the behind the scene internal collections. They are listed here so tha
   <data name="U05" xml:space="preserve">
     <value>Symbol</value>
   </data>
-  <data name="Tabbed_Pivot.Text" xml:space="preserve">  
+  <data name="Tabbed_Pivot.Text" xml:space="preserve">
     <value>Tabbed</value>
     <comment>Page title for Tabbed</comment>
   </data>
-  <data name="Tabbed_PivotItem1.Header" xml:space="preserve">  
+  <data name="Tabbed_PivotItem1.Header" xml:space="preserve">
     <value>Item 1</value>
     <comment>First Pivot item title for Tabbed</comment>
   </data>
