--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -200,10 +200,10 @@
     <value>Model Graph application</value>
   </data>
   <data name="004N" xml:space="preserve">
-    <value>List of loaded models</value>
+    <value>List of new or open models</value>
   </data>
   <data name="004S" xml:space="preserve">
-    <value>List of loaded models</value>
+    <value>List of new or open models</value>
   </data>
   <data name="005S" xml:space="preserve">
     <value>Sort Mode (None, Ascending, Descending)</value>
@@ -1459,25 +1459,25 @@ These are the behind the scene internal collections. They are listed here so tha
     <value>Char</value>
   </data>
   <data name="802N" xml:space="preserve">
-    <value>Byte</value>
+    <value>UInt8</value>
   </data>
   <data name="803N" xml:space="preserve">
-    <value>SByte</value>
+    <value>Int8</value>
   </data>
   <data name="804N" xml:space="preserve">
     <value>Int16</value>
   </data>
   <data name="805N" xml:space="preserve">
-    <value>Int32</value>
-  </data>
-  <data name="806N" xml:space="preserve">
-    <value>Int64</value>
-  </data>
-  <data name="807N" xml:space="preserve">
     <value>UInt16</value>
   </data>
-  <data name="808N" xml:space="preserve">
+  <data name="806N" xml:space="preserve">
+    <value>Int32</value>
+  </data>
+  <data name="807N" xml:space="preserve">
     <value>UInt32</value>
+  </data>
+  <data name="808N" xml:space="preserve">
+    <value>Int64</value>
   </data>
   <data name="809N" xml:space="preserve">
     <value>UInt64</value>
@@ -1492,57 +1492,54 @@ These are the behind the scene internal collections. They are listed here so tha
     <value>Decimal</value>
   </data>
   <data name="80DN" xml:space="preserve">
-    <value>Guid</value>
-  </data>
-  <data name="80EN" xml:space="preserve">
     <value>DateTime</value>
   </data>
-  <data name="80FN" xml:space="preserve">
-    <value>TimeSpan</value>
-  </data>
-  <data name="810N" xml:space="preserve">
+  <data name="80EN" xml:space="preserve">
     <value>String</value>
   </data>
-  <data name="811N" xml:space="preserve">
+  <data name="80FN" xml:space="preserve">
+    <value>BoolArray</value>
+  </data>
+  <data name="810N" xml:space="preserve">
     <value>CharArray</value>
   </data>
+  <data name="811N" xml:space="preserve">
+    <value>UInt8Array</value>
+  </data>
   <data name="812N" xml:space="preserve">
-    <value>HexArray</value>
+    <value>Int8Array</value>
   </data>
   <data name="813N" xml:space="preserve">
-    <value>ByteArray</value>
-  </data>
-  <data name="814N" xml:space="preserve">
-    <value>SByteArray</value>
-  </data>
-  <data name="815N" xml:space="preserve">
     <value>Int16Array</value>
   </data>
-  <data name="816N" xml:space="preserve">
+  <data name="814N" xml:space="preserve">
+    <value>UInt16Array</value>
+  </data>
+  <data name="815N" xml:space="preserve">
     <value>Int32Array</value>
+  </data>
+  <data name="816N" xml:space="preserve">
+    <value>UInt32Array</value>
   </data>
   <data name="817N" xml:space="preserve">
     <value>Int64Array</value>
   </data>
   <data name="818N" xml:space="preserve">
-    <value>UInt16Array</value>
-  </data>
-  <data name="819N" xml:space="preserve">
-    <value>UInt32Array</value>
-  </data>
-  <data name="81AN" xml:space="preserve">
     <value>UInt64Array</value>
   </data>
-  <data name="81BN" xml:space="preserve">
+  <data name="819N" xml:space="preserve">
     <value>SingleArray</value>
   </data>
-  <data name="81CN" xml:space="preserve">
+  <data name="81AN" xml:space="preserve">
     <value>DoubleArray</value>
   </data>
-  <data name="81DN" xml:space="preserve">
+  <data name="81BN" xml:space="preserve">
     <value>DecimalArray</value>
   </data>
-  <data name="81EN" xml:space="preserve">
+  <data name="81CN" xml:space="preserve">
+    <value>DateTimeArray</value>
+  </data>
+  <data name="81DN" xml:space="preserve">
     <value>StringArray</value>
   </data>
   <data name="83FN" xml:space="preserve">
