Initial work on Setting(s)

--- a/ModelGraph/ModelGraphUWP/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraphUWP/Strings/en-us/Resources.resw
@@ -2106,7 +2106,7 @@ Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Ma
     <value>Model schema and metadata</value>
   </data>
   <data name="624S" xml:space="preserve">
-    <value>Model modeling data</value>
+    <value>Modeling data</value>
   </data>
   <data name="403N" xml:space="preserve">
     <value>Show Item Index</value>
