Fixed NavigationView header

--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -219,7 +219,7 @@
     <value>Show/Hide Item Filter String</value>
   </data>
   <data name="00CN" xml:space="preserve">
-    <value>New</value>
+    <value>New Model</value>
   </data>
   <data name="00CS" xml:space="preserve">
     <value>New unsaved data model</value>
