--- a/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
+++ b/ModelGraph/ModelGraph/Strings/en-us/Resources.resw
@@ -2146,21 +2146,6 @@ NEC – NWC – SEC - SWC</value>
   <data name="DFFN" xml:space="preserve">
     <value>Dash Style</value>
   </data>
-  <data name="U01" xml:space="preserve">
-    <value>Open</value>
-  </data>
-  <data name="U02" xml:space="preserve">
-    <value>Close</value>
-  </data>
-  <data name="U03" xml:space="preserve">
-    <value>Tree</value>
-  </data>
-  <data name="U04" xml:space="preserve">
-    <value>Graph</value>
-  </data>
-  <data name="U05" xml:space="preserve">
-    <value>Symbol</value>
-  </data>
   <data name="_CompareNav.Content" xml:space="preserve">
     <value>Compare</value>
   </data>
@@ -2182,17 +2167,8 @@ NEC – NWC – SEC - SWC</value>
   <data name="_OpenModelFile.ToolTipService.ToolTip" xml:space="preserve">
     <value>Open a model data file</value>
   </data>
-  <data name="AppDescription" xml:space="preserve">
-    <value>Relatational Data Model Graph</value>
-  </data>
-  <data name="AppDisplayName" xml:space="preserve">
+  <data name="_AppDisplayName" xml:space="preserve">
     <value>ModelGraph</value>
-  </data>
-  <data name="_AppDescription.Text" xml:space="preserve">
-    <value>This utility makes the creation and maintenance of a relational models easy and fun.
-Use tree view’s Metadata section to create/edit your model’s schema as well define your custom tree and graph views.
-The tree view’s Modeling data section can be to inspect your model’s modeling data and also create a small amount of test data.
-The bulk of your modeling data work is best done in the custom tree and graph views that you create.</value>
   </data>
   <data name="62EN" xml:space="preserve">
     <value>Metadata</value>
@@ -2206,43 +2182,158 @@ The bulk of your modeling data work is best done in the custom tree and graph vi
   <data name="62FS" xml:space="preserve">
     <value>Modeling data</value>
   </data>
-  <data name="941X.Text" xml:space="preserve">
-    <value>Flip Vertical</value>
-  </data>
-  <data name="942X.Text" xml:space="preserve">
-    <value>Flip Horizontal</value>
-  </data>
-  <data name="943X.Text" xml:space="preserve">
-    <value>Flip Both Ways</value>
-  </data>
-  <data name="944X.Text" xml:space="preserve">
-    <value>Rotate Clockwise 90</value>
-  </data>
-  <data name="945X.Text" xml:space="preserve">
-    <value>Rotate Clockwise 180</value>
-  </data>
-  <data name="946X.Text" xml:space="preserve">
-    <value>Rotate Counter Clockwise 90</value>
-  </data>
-  <data name="947X.Text" xml:space="preserve">
-    <value>Rotate Counter Clockwise 180</value>
-  </data>
-  <data name="_001A" xml:space="preserve">
+  <data name="_01A" xml:space="preserve">
     <value>Select one shape at a time</value>
+    <comment>SymbolEditorControl__TogleOneManyButton__ToolTip-A</comment>
   </data>
-  <data name="_001B" xml:space="preserve">
+  <data name="_01B" xml:space="preserve">
     <value>Select one or more shapes at a time</value>
+    <comment>SymbolEditorControl__TogleOneManyButton__ToolTip-B</comment>
   </data>
-  <data name="_002A" xml:space="preserve">
+  <data name="_02A" xml:space="preserve">
     <value>Polyline controls are disabled, Click to enable</value>
+    <comment>SymbolEditorControl__LockButton__ToolTip-A</comment>
   </data>
-  <data name="_002B" xml:space="preserve">
+  <data name="_02B" xml:space="preserve">
     <value>Polyline controls are enabled, Click to disable</value>
+    <comment>SymbolEditorControl__LockButton__ToolTip-B</comment>
   </data>
   <data name="456N" xml:space="preserve">
     <value>Symbol Size</value>
   </data>
   <data name="456S" xml:space="preserve">
     <value>Full size width/height of symbols (12 to 255)</value>
+  </data>
+  <data name="_410.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Align all items in selected regions</value>
+  </data>
+  <data name="_410.Content" xml:space="preserve">
+    <value>A</value>
+  </data>
+  <data name="_411.Content" xml:space="preserve">
+    <value>F</value>
+  </data>
+  <data name="_411.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Flip selected region</value>
+  </data>
+  <data name="_412.Content" xml:space="preserve">
+    <value>R</value>
+  </data>
+  <data name="_412.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Rotate selected region</value>
+  </data>
+  <data name="_413.Content" xml:space="preserve">
+    <value>G</value>
+  </data>
+  <data name="_413.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Aplly gravity in selected region</value>
+  </data>
+  <data name="_414.Content" xml:space="preserve">
+    <value>M</value>
+  </data>
+  <data name="_414.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Enable movement</value>
+  </data>
+  <data name="_415.Content" xml:space="preserve">
+    <value>L</value>
+  </data>
+  <data name="_415.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Enable creation links between items</value>
+  </data>
+  <data name="_416.Content" xml:space="preserve">
+    <value>U</value>
+  </data>
+  <data name="_416.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Enable removal of links (unlink) </value>
+  </data>
+  <data name="_417.Content" xml:space="preserve">
+    <value>C</value>
+  </data>
+  <data name="_417.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Copy </value>
+  </data>
+  <data name="_418.Content" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="_418.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Cut</value>
+  </data>
+  <data name="_419.Content" xml:space="preserve">
+    <value>P</value>
+  </data>
+  <data name="_419.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pase</value>
+  </data>
+  <data name="_420.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_420.ToolTipService.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_421.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_421.ToolTipService.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_422.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_422.ToolTipService.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_423.Content" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_423.ToolTipService.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_406.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Number of actions in the Redo list</value>
+  </data>
+  <data name="_404.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Number of actions in the Undo list</value>
+  </data>
+  <data name="_405.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Redo the previous action</value>
+  </data>
+  <data name="_403.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Undo the previous action</value>
+  </data>
+  <data name="_426.Text" xml:space="preserve">
+    <value>Align Vertical Center</value>
+  </data>
+  <data name="_431.Text" xml:space="preserve">
+    <value>Align Bottom</value>
+  </data>
+  <data name="_427.Text" xml:space="preserve">
+    <value>Align Horizontal Center</value>
+  </data>
+  <data name="_432.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_428.Text" xml:space="preserve">
+    <value>Align Right</value>
+  </data>
+  <data name="_433.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_429.Text" xml:space="preserve">
+    <value>Align Left</value>
+  </data>
+  <data name="_434.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_430.Text" xml:space="preserve">
+    <value>Align Top</value>
+  </data>
+  <data name="_435.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="_401.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pinned action ready to execute (click on item or tap Enter key)</value>
+  </data>
+  <data name="_402.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Pin / Unpin action current action</value>
   </data>
 </root>
